Fix test so it runs on Java 8